# landscaping-app

./: .env  .gitignore  README.md  deploy.sh  docker-compose.yml  manage.py  pyproject.toml
.circleci/: config.yml
apps/scheduling/: api_views.py  filters.py  models.py  pagination.py  serializers.py  tests.py  urls.py  views.py
apps/scheduling/migrations/: 0001_initial.py
apps/services/: models.py  tests.py
apps/services/management/commands/: backfill_priority.py
apps/services/migrations/: 0001_initial.py  0002_service_priority.py  0003_alter_service_priority.py
apps/users/: models.py
apps/users/migrations/: 0001_initial.py  0002_teammember.py
landscape/: asgi.py  settings.py  urls.py  wsgi.py
landscape/landscape/: settings.py
serverless/: template.yaml
serverless/src/functions/: check_weather.py  create_appointment.py  send_reminder.py
